Add CSS to HTML

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
 
 <head>
-    <title>Sample Title Page</title>
+	<title>Sample Title Page</title>
+	<style>
+		body {
+			font-family: monospace;
+			color: navy;
+			padding: 40px;
+		}
+
+		.header {
+			font-weight: 500;
+		}
+	</style>
 </head>
 
 <body>
-    <h1>Hello, world</h1>
+	<h1 class="header">Hello, world</h1>
+	<br>
+	<p>This is just a test file.</p>
 </body>
 
 </html>
