--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
 
 <head>
 	<title>Sample Title Page</title>
-	<style>
-		body {
-			font-family: monospace;
-			color: navy;
-			padding: 40px;
-		}
-
-		.header {
-			font-weight: 500;
-		}
-	</style>
+	<link rel="stylesheet" href="./style.css" type="text/css" />
 </head>
 
 <body>
