--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Sample Title Page</title>
 	<link rel="stylesheet" href="./style.css" type="text/css" />
+	<script src="./script.js"></script>
 </head>
 
 <body>
